refactor: 주소지 정규화와 오류 규칙 정리(#26)
JDK 표준 문자열 검증을 사용하고 주소지 등록 오류 규칙을 문서화합니다.
테스트 이름을 대상 UseCase와 일치하도록 정리합니다.